<resources>
    <string name="app_name">GitHubApp</string>
    <string name="repositories">Repositories</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">GitHubApp</string>
    <string name="hello_first_fragment">Hello, Devpass!</string>
    <string name="title_activity_repository_details">RepositoryDetails</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="app_information">App Information</string>
    <string name="version">Version</string>
    <string name="build">Build</string>
    <string name="_55">55</string>
    <string name="_1_0_0">1.0.0</string>

    <string name="title">challenge-github-app</string>
    <string name="subtitle">devpass-tech</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_license">View More</string>
    <string name="nome_codlicense">GPL-2.0</string>
    <string name="nome_gnu_license">GNU General Public License</string>
    <string name="content_description_logo">Descrição Logo Header</string>
    <string name="quantidade_stars">5 stars</string>
    <string name="quantidade_forks">17 forks</string>
    <string name="tabitem_about">ABOUT</string>
    <string name="tabitem_owner">OWNER</string>
    <string name="tabitem_license">LICENSE</string>
    <string name="about_repository">About This Repository</string>
    <string name="titulo_sub_nome_about">Base project for Devpass\' Dev Sprints.</string>
    <string name="nome_owner">Rodrigo Borges</string>
    <string name="sub_nome_owner">Mobile Tech Lead</string>
    <string name="tab_about">ABOUT</string>
    <string name="tab_owner">OWNER</string>
    <string name="tab_license">LICENSE</string>

</resources>