<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.RepositoryDetailsHeaderFragment">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardDetailsHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearPrincipalHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:id="@+id/logoDetailsHeader"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_Header"
                android:contentDescription="@string/content_description_logo"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/devpass_logo" />

            <LinearLayout
                android:id="@+id/layoutPrincipalHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/nomeDetailsHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginStart="@dimen/second_margin"
                    android:textStyle="bold"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:id="@+id/start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fourth_margin"
                    android:layout_marginStart="@dimen/second_margin"
                    android:text="@string/quantidade_stars"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/black_02" />

                <TextView
                    android:id="@+id/forks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fifth_margin"
                    android:layout_marginStart="@dimen/second_margin"
                    android:textColor="@color/black_02"
                    android:text="@string/quantidade_forks"
                    android:textAppearance="?attr/textAppearanceBody2"
                     />

            </LinearLayout>

    </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>